# mcp-google-sheets

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/mcp_google_sheets/: __init__.py  server.py
